--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ graphene==3.4.3
 graphene-django==3.2.3
 graphql-core==3.2.6
 graphql-relay==3.2.0
+gunicorn==23.0.0
+packaging==25.0
 pillow==11.3.0
 promise==2.3
 python-dateutil==2.9.0.post0
